part2/hashemitter/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashemitter-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashemitter
  template:
    metadata:
      labels:
        app: hashemitter
    spec:
      volumes: # Define volume
        - name: shared-volume
          persistentVolumeClaim:
            claimName: volume-claim      
      containers:
        - name: reader
          image: sasumaki/reader:76F0AA4A-138C-450C-BF65-F8FECE3AEE7C
          volumeMounts: # Mount volume
          - name: shared-volume
            mountPath: /go/src/app/files
  
        - name: hashemitter
          image: sasumaki/hashemitter:76F0AA4A-138C-450C-BF65-F8FECE3AEE7C
          volumeMounts: # Mount volume
          - name: shared-volume
            mountPath: /go/src/app/files
