part2/hashemitter/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashemitter-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hashgenerator-svc
          servicePort: 2346
